--- a/.htaccess
+++ b/.htaccess
@@ -13,6 +13,9 @@ ErrorDocument 404 /404.php
   Options +FollowSymLinks
   RewriteEngine On
   RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteRule ^(.*[^/])$ /$1/ [L,R=301]
+
+  RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-l
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !/bitrix/urlrewrite.php$
@@ -35,6 +38,7 @@ ErrorDocument 404 /404.php
 </IfModule>
 
 Redirect /upload/ http://dev.arteva.ru/upload/
+Redirect /bitrix/images/ http://dev.arteva.ru/bitrix/images/
 
 #AuthName "Protected Bitrix installer"
 #AuthType Basic
